@@ -10,6 +10,7 @@ Version 3.0.0 - SVN
  - Add support for FHS directory structure installation.
  - Move all configure paths to globally included paths.mk file.
  - Repair broken documentation build/install system.
+ - MySQL table types are now InnoDB.
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
